--- a/fb_clone.html
+++ b/fb_clone.html
@@ -23,7 +23,7 @@
             </div>
             <div class="right-nv">
               <div class="text-box">
-                <h1> A K V</h1>
+                <h1> FaceBook </h1>
               </div>
               <div class="nav-user-icon online" onclick="settingsMenuToggle()">
                 <img src="socialbook_img/profile.png" >
