--- a/fb_clone.html
+++ b/fb_clone.html
@@ -309,9 +309,9 @@
                   <span>Mar</span>
                 </div>
                 <div class="right-event">  <!-- for address -->  
-                  <h4>Katta Vyapar</h4>
+                  <h4>Furniture Buisness</h4>
                 
-                  <p>   <i class="fa-solid fa-location-pin"></i> Kalin Bhaiya Elaka</p>
+                  <p>   <i class="fa-solid fa-location-pin"></i> Furniture </p>
                   <a href="">More Info</a>
                 </div>
               </div>
@@ -321,7 +321,7 @@
                   <span>Feb</span>
                 </div>
                 <div class="right-event">  <!-- for address -->  
-                  <h4>Gun Factory</h4>
+                  <h4>Cement Factory</h4>
                   <p>   <i class="fa-solid fa-location-pin"></i> sector-13 Greater noida</p>
                   <a href="">More Info</a>
                 </div>
@@ -341,7 +341,7 @@
                 <div class="online">
                   <img src="./socialbook_img/member-1.png" >
                 </div>
-                <p> Dhanno Singhaniya</p>
+                <p> Shaina Singhaniya</p>
               </div>
               <div class="online-list">
                 <div class="online">
